# Assignment_3_Agentic-Turing-Machine-Development_-CLI-

./: .coverage  .gitignore  CLAUDE_SKILLS_INSTALL.md  CLI_AGENT_GUIDE.md  EXECUTION_GUIDE.md  HOW_TO_RUN.md  MARKDOWN_AGENTS.md  NEXT_SESSION_INSTRUCTIONS.md  QUICK_REFERENCE.md  QUICK_START_UV.md  README.md  README_ENHANCED.md  START_HERE_MIT_PRD.md  UV_SETUP.md  WHY_WE_DESERVE_100.md  agent1_skill.md  agent2_skill.md  agent3_skill.md  analysis_results_local.json  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  run_agent_chain_md.sh  run_with_skills.py  setup_uv.sh  test_agent.py
.github/workflows/: deploy.yml  docker.yml  pipeline.yml  release.yml  test-and-coverage.yml  validate-pr.yml
assets/: CI_CD_EVIDENCE.md
assets/diagrams/: PROCESS_FLOW.md
assets/screenshots/: coverage_report.html
config/: config.yaml
docs/: COMPREHENSIVE_TESTING_REPORT.md  DOCUMENTATION_CLEANUP_COMPLETE.md  DOCUMENTATION_ORGANIZATION_COMPLETE.md  DOCUMENTATION_STRUCTURE.md  ISO_25010_FULL_COMPLIANCE_ACHIEVED.md  ISO_25010_FULL_COMPLIANCE_PLAN.md  PIPELINE_EXECUTION.md  PROMPTS.md  README.md  START_HERE_MIT_PRD.md  TESTING_QUICK_REFERENCE.md  TESTING_VISUAL_SUMMARY.md  iso_compliance.md  prompt_library.md
results/: adversarial_robustness.json  analysis.ipynb  comparative_analysis.json  cost_analysis.json  research_analysis_summary.json  sensitivity_analysis.json  stochastic_resonance_analysis.json
skills/: README.md
src/: __init__.py  agent_tester.py  analysis.py  comparative_analysis.py  config.py  dashboard.py  pipeline.py
tests/: __init__.py  conftest.py
(+39 files in other folders)
