[project]
name = "agentic-turing-machine"
version = "1.0.0"
description = "Multi-stage translation pipeline to test LLM robustness through semantic drift analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Fouad Azarkane" }
]
keywords = ["llm", "multi-agent", "semantic-analysis", "openai", "machine-learning"]

dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["analyze_results.py", "*.sh", "*.txt", "*.md"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

